ldap authetication added - uses mail & password -added role based on distribution list
add log/branding customization

and settings now has an acrodian view
